objects/Customer_Inquiry_SFDC2__c.object
<CustomObject>
    <description>Synapsys data brought into Salesforce, SFDC2</description>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Officer__c</fullName>
        <label>Closed Officer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_Officer__c</fullName>
        <label>Created Officer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <label>Customer Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Inquiries</relationshipLabel>
        <relationshipName>Customer_Inquiries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message_Id__c</fullName>
        <externalId>true</externalId>
        <label>Message Id</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Customer Inquiry</label>
    <nameField>
        <displayFormat>CI-{0000}</displayFormat>
        <label>Customer Inquiry #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Inquiries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>